CMAKE_MINIMUM_REQUIRED (VERSION 3.18)
PROJECT(serial CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

FILE(GLOB SERIAL_SRC "${PROJECT_SOURCE_DIR}/src/*.cpp")

ADD_LIBRARY(serial ${SERIAL_SRC})

TARGET_INCLUDE_DIRECTORIES(serial PUBLIC include)

LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

INCLUDE(external_blaspp)
TARGET_INCLUDE_DIRECTORIES(serial PUBLIC ${BLASPP_INCLUDE_DIR})
TARGET_LINK_DIRECTORIES(serial PUBLIC ${BLASPP_LIBS_DIR})

INCLUDE(external_lapackpp)
TARGET_INCLUDE_DIRECTORIES(serial PUBLIC ${LAPACKPP_INCLUDE_DIR})
TARGET_LINK_DIRECTORIES(serial PUBLIC ${LAPACKPP_LIBS_DIR})

ADD_DEPENDENCIES(lapackpp blaspp)
ADD_DEPENDENCIES(serial lapackpp)

TARGET_LINK_LIBRARIES(serial libblaspp.so lapack liblapackpp.a)

IF (BUILD_GMHC_TESTS)
	INCLUDE(GoogleTest)

	ADD_EXECUTABLE(serial_test tests/test.cpp)

	TARGET_LINK_LIBRARIES(serial_test serial gmock_main pthread)

	GTEST_DISCOVER_TESTS(serial_test)
ENDIF ()